# pyGSTi

./: .flake8  .travis.yml  install_locally.py  setup.cfg  setup.py
scripts/: autoformat.sh  upgrade2v0.9.7.py
scripts/advanced_report/: advanced_report.py  build_tutorial_20.py  create.py
scripts/advanced_report/templates/: lorem.py  setup.py
scripts/git/: hooksettings.py  post-commit  post-merge  pre-commit  pre-push  prepare-commit-msg
scripts/mpi/: mpi  parallel_apply.py
scripts/profiling/: build_profile.py  percents.py
scripts/profiling/gaugeopt/: 1qbasic.py  3Q_example.py  3q_basic.py  basic.py  bench_obj_fn.py  build_results.py  cp.py  create_scaling_graph.py  load.py  mxmul.py  tp.py
scripts/profiling/report/: create_pkl.py  gatestring_hashing.py  gen.py  native_hashing.py  pickling.py  report_example.py  report_full.py  reuse.py
