[metadata]
description-file = README.md
license-file = license.txt

[bdist_wheel]
universal = 1

[nosetests]
verbosity = 2
with-timer = 1
with-id = 1
rednose = 1

[flake8]
# These won't be caught by flake8:
# E265: block comment should start with '# '
#       (Note: autopep8 will not fix instances of commented-out code)
# W503: line break before binary operator
ignore = E265,W503
# set line limit for E501: line too long
max-line-length = 120
exclude = .git,
          build,
          CI,
          doc,
          jupyter_notebooks,
          local,
          __pycache__,
          packages/pygsti/baseobjs/parsetab_string.py

[pycodestyle] # Used by autopep8
# These won't be fixed by autopep8:
# W503: line break before binary operator
ignore = W503
# set line limit for E501: line too long
max_line_length = 120
