[metadata]
description-file = README.md
license-file = license.txt

[bdist_wheel]
universal = 1

[nosetests]
verbosity = 2
with-timer = 1
with-id = 1
rednose = 1

[flake8]
# These will be ignored by flake8 & autoformatters:
# E265: block comment should start with '# '
#       (Note: autopep8 will not fix instances of commented-out code)
# E266: too many leading ‘#’ for block comment
# E501: line too long
# E701: multiple statements on one line (colon)
# E704: multiple statements on one line (def)
# E722: do not use bare except, specify exception instead
# E741: do not use variables named ‘l’, ‘O’, or ‘I’
# W503: line break before binary operator
# F401: module imported but unused
# F403: ‘from module import *’ used; unable to detect undefined names
# F405: name may be undefined, or defined from star imports: module
ignore = E265,,E266,E501,E701,E704,E722,E741,W503,F401,F403,F405
exclude = .git,
          build,
          CI,
          doc,
          jupyter_notebooks,
          local,
          __pycache__,
          test,
          packages/pygsti/baseobjs/parsetab_string.py
